--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "End-to-end crypto plugin for the Hoodie client store.",
   "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "update-coc": "weallbehave -o . && git add CODE_OF_CONDUCT.md && git commit -m 'docs(coc): updated CODE_OF_CONDUCT.md'",
     "update-contrib": "weallcontribute -o . && git add CONTRIBUTING.md && git commit -m 'docs(contributing): updated CONTRIBUTING.md'",
@@ -28,5 +31,10 @@
     "standard": "^10.0.3",
     "weallbehave": "^1.2.0",
     "weallcontribute": "^1.0.8"
+  },
+  "dependencies": {
+    "native-crypto": "^1.8.1",
+    "randombytes": "^2.0.5",
+    "uuid": "^3.1.0"
   }
 }
