--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "devDependencies": {
     "@hoodie/store-client": "^8.3.0",
     "hoodie": "^28.2.5",
+    "pouchdb-adapter-memory": "^6.4.3",
+    "pouchdb-core": "^6.4.3",
+    "pouchdb-replication": "^6.4.3",
     "standard": "^10.0.3",
     "tap-spec": "^4.1.1",
     "tape": "^4.8.0",
@@ -39,9 +42,7 @@
   "dependencies": {
     "lie": "^3.2.0",
     "native-crypto": "^1.8.1",
-    "pouchdb-adapter-memory": "^6.4.3",
-    "pouchdb-core": "^6.4.3",
-    "pouchdb-replication": "^6.4.3",
+    "pouchdb-errors": "^6.4.3",
     "randombytes": "^2.0.6",
     "uuid": "^3.2.1"
   }
