--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "update-contrib": "weallcontribute -o . && git add CONTRIBUTING.md && git commit -m 'docs(contributing): updated CONTRIBUTING.md'",
     "pretest": "standard",
     "test": "node tests | tap-spec",
+    "standard:fix": "standard --fix",
     "start": "hoodie"
   },
   "repository": {
@@ -34,7 +35,7 @@
     "pouchdb-adapter-memory": "^6.4.3",
     "pouchdb-core": "^6.4.3",
     "pouchdb-replication": "^6.4.3",
-    "standard": "^10.0.3",
+    "standard": "^11.0.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.9.0",
     "weallbehave": "^1.2.0",
