--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     "standard": "^12.0.1",
     "tap-spec": "^5.0.0",
     "tape": "^4.10.1",
+    "textlint": "^11.2.3",
+    "textlint-rule-alex": "^1.3.1",
+    "textlint-rule-common-misspellings": "^1.0.1",
+    "textlint-rule-rousseau": "^1.4.5",
     "weallbehave": "^1.2.0",
     "weallcontribute": "^1.0.8"
   },
