--- a/package.json
+++ b/package.json
@@ -69,5 +69,8 @@
     "pouchdb-errors": "^7.1.1",
     "randombytes": "^2.1.0",
     "uuid": "^3.2.1"
+  },
+  "release": {
+    "branch": "latest"
   }
 }
