--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
-          - npx semantic-release
+          - npm run semantic-release
