--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fix:docs": "textlint --fix README.md docs/*",
     "fix:style": "standard --fix",
     "start": "hoodie",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release -b latest"
   },
   "repository": {
     "type": "git",
