--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fix:docs": "textlint --fix README.md docs/*",
     "fix:style": "standard --fix",
     "start": "hoodie",
-    "semantic-release": "semantic-release -b latest"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -69,5 +69,9 @@
     "pouchdb-errors": "^7.1.1",
     "randombytes": "^2.1.0",
     "uuid": "^3.2.1"
+  },
+  "release": {
+    "debug": true,
+    "branch": "latest"
   }
 }
