--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,34 @@
 language: node_js
 
-node_js:
-  - "6"
-  - "8"
-  - "10"
-  - "node"
-
 jobs:
   include:
+    - stage: test
+      node_js:
+        - "6"
+        - "8"
+        - "10"
+        - "12"
+      script:
+        - npm run test
+    - stage: docs
+      node_js: lts/*
+      script:
+        - npm run textlint
     # Define the release stage that runs semantic-release
     - stage: release
       node_js: lts/*
       # Advanced: optionally overwrite your default `script` step to skip the tests
       # script: skip
       deploy:
-        branch: latest
         provider: script
         skip_cleanup: true
+        on:
+          branch: latest
         script:
           - npm run semantic-release
 
 stages:
   - test
+  - name: docs
   - name: release
     if: branch = latest
