test(.travis.yml): only run release branch if its not a pull request

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ jobs:
 
 stages:
   - test
-  - name: docs
+  - docs
   - name: release
-    if: branch = latest
+    if: branch = latest AND type != pull_request
