--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ node_js:
   - "10"
   - "node"
 
+# Trigger a push build on latest and greenkeeper branches + PRs build on every branches
+# Avoid double build on PRs (See https://github.com/travis-ci/travis-ci/issues/1147)
+branches:
+  only:
+    - latest
+    - /^greenkeeper.*$/
+
 jobs:
   include:
     - stage: docs
