--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
     "pouchdb-adapter-memory": "^7.1.1",
     "pouchdb-core": "^7.1.1",
     "pouchdb-replication": "^7.1.1",
+    "semantic-release": "^15.13.27",
     "standard": "^14.3.1",
     "tap-spec": "^5.0.0",
     "tape": "^4.11.0",
-    "textlint": "^11.3.1",
+    "textlint": "^11.4.0",
     "textlint-rule-alex": "^1.3.1",
     "textlint-rule-common-misspellings": "^1.0.1",
     "textlint-rule-rousseau": "^1.4.6",
     "weallbehave": "^1.2.0",
-    "weallcontribute": "^1.0.9",
-    "semantic-release": "^15.13.24"
+    "weallcontribute": "^1.0.9"
   },
   "dependencies": {
     "@hoodie/store-client": "^8.3.0",
