--- a/package.json
+++ b/package.json
@@ -46,14 +46,17 @@
     "lib"
   ],
   "devDependencies": {
+    "browserify": "^16.5.0",
     "hoodie": "^28.2.10",
     "pouchdb-adapter-memory": "^7.1.1",
     "pouchdb-core": "^7.1.1",
     "pouchdb-replication": "^7.1.1",
+    "puppeteer": "^2.0.0",
+    "puppeteer-firefox": "^0.5.0",
     "semantic-release": "^15.13.31",
     "standard": "^14.3.1",
     "tap-spec": "^5.0.0",
-    "tape": "^4.11.0",
+    "tape": "^4.12.0",
     "textlint": "^11.5.0",
     "textlint-rule-alex": "^1.3.1",
     "textlint-rule-common-misspellings": "^1.0.1",
