--- a/package.json
+++ b/package.json
@@ -46,18 +46,18 @@
     "lib"
   ],
   "devDependencies": {
-    "browserify": "^16.5.0",
+    "browserify": "^16.5.1",
     "hoodie": "^28.2.10",
-    "pouchdb-adapter-memory": "^7.1.1",
-    "pouchdb-core": "^7.1.1",
-    "pouchdb-replication": "^7.1.1",
-    "puppeteer": "^2.1.0",
+    "pouchdb-adapter-memory": "^7.2.1",
+    "pouchdb-core": "^7.2.1",
+    "pouchdb-replication": "^7.2.1",
+    "puppeteer": "^2.1.1",
     "puppeteer-firefox": "^0.5.1",
-    "semantic-release": "^17.0.1",
-    "standard": "^14.3.1",
+    "semantic-release": "^17.0.4",
+    "standard": "^14.3.3",
     "tap-spec": "^5.0.0",
-    "tape": "^4.13.0",
-    "textlint": "^11.6.1",
+    "tape": "^4.13.2",
+    "textlint": "^11.6.3",
     "textlint-rule-alex": "^1.3.1",
     "textlint-rule-common-misspellings": "^1.0.1",
     "textlint-rule-rousseau": "^1.4.6",
@@ -70,11 +70,13 @@
     "lie": "^3.3.0",
     "lodash": "^4.17.15",
     "pbkdf2": "^3.0.17",
-    "pouchdb-errors": "^7.1.1",
+    "pouchdb-errors": "^7.2.1",
     "randombytes": "^2.1.0",
     "uuid": "^3.4.0"
   },
   "release": {
-    "branches": ["latest"]
+    "branches": [
+      "latest"
+    ]
   }
 }
