--- a/package.json
+++ b/package.json
@@ -48,18 +48,19 @@
     "lib"
   ],
   "devDependencies": {
-    "browserify": "^16.5.1",
+    "browserify": "^16.5.2",
     "hoodie": "^28.2.10",
-    "pouchdb-adapter-memory": "^7.2.1",
-    "pouchdb-core": "^7.2.1",
-    "pouchdb-replication": "^7.2.1",
+    "pouchdb-adapter-memory": "^7.2.2",
+    "pouchdb-core": "^7.2.2",
+    "pouchdb-replication": "^7.2.2",
     "puppeteer": "^2.1.1",
     "puppeteer-firefox": "^0.5.1",
-    "semantic-release": "^17.0.4",
-    "standard": "^14.3.3",
+    "semantic-release": "^17.1.1",
+    "snyk": "^1.372.0",
+    "standard": "^14.3.4",
     "tap-spec": "^5.0.0",
-    "tape": "^4.13.2",
-    "textlint": "^11.6.3",
+    "tape": "^4.13.3",
+    "textlint": "^11.7.6",
     "textlint-rule-alex": "^1.3.1",
     "textlint-rule-common-misspellings": "^1.0.1",
     "textlint-rule-rousseau": "^1.4.6",
@@ -70,12 +71,11 @@
     "@hoodie/store-client": "^8.3.0",
     "browserify-aes": "^1.2.0",
     "lie": "^3.3.0",
-    "lodash": "^4.17.15",
-    "pbkdf2": "^3.0.17",
-    "pouchdb-errors": "^7.2.1",
+    "lodash": "^4.17.19",
+    "pbkdf2": "^3.1.1",
+    "pouchdb-errors": "^7.2.2",
     "randombytes": "^2.1.0",
-    "uuid": "^3.4.0",
-    "snyk": "^1.316.1"
+    "uuid": "^3.4.0"
   },
   "release": {
     "branches": [
