--- a/.textlintrc
+++ b/.textlintrc
@@ -4,7 +4,8 @@
     "alex": {
       "allow": [
         reject,
-        rejects
+        rejects,
+        special
       ]
     },
     "common-misspellings": true,
