--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   ],
   "devDependencies": {
     "browserify": "^17.0.0",
+    "browserify-aes": "^1.2.0",
     "hoodie": "^28.2.10",
+    "pbkdf2": "^3.1.1",
     "pouchdb-adapter-memory": "^7.2.2",
     "pouchdb-core": "^7.2.2",
     "pouchdb-hoodie-api": "^2.0.0",
