--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "textlint-rule-alex": "^3.0.0",
     "textlint-rule-common-misspellings": "^1.0.1",
     "textlint-rule-rousseau": "^1.4.6",
+    "typescript": "^4.1.3",
     "weallbehave": "^1.2.0",
     "weallcontribute": "^1.0.9"
   },
   "dependencies": {
     "@hoodie/store-client": "^8.3.0",
+    "@types/pouchdb-core": "^7.0.6",
     "browserify-aes": "^1.2.0",
     "buffer": "^6.0.3",
     "lie": "^3.3.0",
